MMA-8007 Fiks deprekeringer og ubrukte properties